Code refactoring PolygonConverter